# infi.clickhouse_orm

./: .git-blame-ignore-revs  .gitignore  .noseids  .pylintrc  CHANGELOG.md  CHANGELOG.rst  LICENSE  MIGRATIONS.rst  README  README.md  README.rst  buildout.cfg  pyproject.toml  setup.cfg  setup.in  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  pr-python310.yml  pr-python37.yml  pr-python38.yml  pr-python39.yml  python-package.yml  python-publish.yml  python-test.yml  unittest.yml
ClickHouseClient/: ClickHouseClient.py  SubDatabase.py  __init__.py  conf.ini
clickhouse_orm/: __init__.py  database.py  engines.py  fields.py  funcs.py  migrations.py  models.py  query.py  system_models.py  utils.py
docs/: async_databases.md  class_reference.md  contributing.md  expressions.md  field_options.md  field_types.md  importing_orm_classes.md  index.md  models_and_databases.md  querysets.md  ref.md  schema_migrations.md  system_models.md  table_engines.md  toc.md  whats_new_in_version_2.md
examples/cpu_usage/: README.md  collect.py  models.py  requirements.txt  results.py
examples/db_explorer/: README.md  charts.py  requirements.txt  server.py
examples/db_explorer/templates/: base.html  database.html  homepage.html  table.html
examples/full_text_search/: .gitignore  README.md  download_ebooks.py  load.py  models.py  requirements.txt  search.py
scripts/: README.md  docs2html.sh  generate_all.sh  generate_ref.py  generate_toc.sh  gh-md-toc  html_to_markdown_toc.py  test_python3.sh
src/Common/Tools/: DatetimeStr.py  DictKey.py  (+2 more)
src/Computing/: ComputingHandler.py  InsertDemo.py  ProcessDemo.py
src/Mode/: ModeDemo.py
src/ModeBuilder/: Builder.py  ModeDemoBuilder.py  __init__.py
src/ModeLoader/: LoadIter.py  ModeLoadIter.py  ModeProcess.py  __init__.py
src/clickhouse_orm/: __init__.py  database.py  engines.py  fields.py  funcs.py  migrations.py  models.py  query.py  session.py  system_models.py  utils.py
tests/: base_test_with_data.py  setup.cfg  test_aiodatabase.py  test_alias_fields.py  test_array_fields.py  test_buffer.py  test_compressed_fields.py  test_constraints.py  test_custom_fields.py  test_database.py  test_datetime_fields.py  test_decimal_fields.py  test_dictionaries.py  test_engines.py  test_enum_fields.py  test_fixed_string_fields.py  test_funcs.py  test_indexes.py  test_inheritance.py  test_ip_fields.py  test_join.py  test_map_fields.py  test_materialized_fields.py  test_migrations.py  test_models.py  test_mutations.py  test_nullable_fields.py  test_orm.py  test_querysets.py  test_readonly.py  test_server_errors.py  test_simple_fields.py  test_system_models.py  test_temporary_models.py  test_tuple_fields.py  test_utils.py  test_uuid_fields.py
tests/fields/: test_alias_fields.py  test_array_fields.py  test_compressed_fields.py  test_custom_fields.py  test_datetime_fields.py  test_decimal_fields.py  test_enum_fields.py  test_fixed_string_fields.py  test_ip_fields.py  test_materialized_fields.py  test_nullable_fields.py  test_simple_fields.py  test_uuid_fields.py
tests/sample_migrations/: 0001_initial.py  0002.py  0003.py  0004.py  0005.py  0006.py  0007.py  0008.py  0009.py  0010.py  0011.py  0012.py  0013.py  0014.py  0015.py  0016.py  0017.py  0018.py  0019.py  0020.py  0021.py
(+16 files in other folders)
