[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ch-orm"
description = "A Python library for working with the ClickHouse database"
readme = "README.md"
keywords = ["ClickHouse", "ORM", 'DB', 'DATABASE', 'OLAP']
license = {text = "BSD License"}
urls = {Homepage = "https://github.com/sswest/ch-orm", Documentation = "https://sswest.github.io/ch-orm/"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database"
]
dependencies = [
    "httpx >= 0.18.0",
    "pytz",
    "iso8601 >= 0.1.12",
    "setuptools"
]
version = "0.2.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py37', 'py38']